@@ -2,6 +2,8 @@ December 2018 6.6
   - New import/export in tools menu
   - YubiKey support
   - Windows users: manage "departmentNumber" (needs to be activated via LAM server profile)
+  - LAM Pro:
+    -> Easy setting of background color in self service profile
 
 
 25.09.2018 6.5
